--- a/app/src/main/res/layout/myday.xml
+++ b/app/src/main/res/layout/myday.xml
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="kappacode.kronos.fragments.MyDay">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/my_day"
-        android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_centerInParent="true"/>
+        <View
+            android:id="@+id/view0"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1" />
 
-</RelativeLayout>
+        <ListView
+            android:id="@+id/listView_activities"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            android:descendantFocusability="beforeDescendants" />
+
+        <Button
+            android:id="@+id/button_add_activity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/button_add_activity"
+            android:textColor="@color/button_add_activity"
+            style="?android:attr/borderlessButtonStyle"/>
+
+
+
+</LinearLayout>
+
