--- a/app/src/main/res/layout/myday.xml
+++ b/app/src/main/res/layout/myday.xml
@@ -7,11 +7,12 @@
     android:orientation="vertical"
     tools:context="kappacode.kronos.fragments.MyDay">
 
-        <View
-            android:id="@+id/view0"
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/piechart"
             android:layout_width="match_parent"
             android:layout_height="0dip"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            />
 
         <ListView
             android:id="@+id/listView_activities"
