--- a/app/src/main/res/layout/myday.xml
+++ b/app/src/main/res/layout/myday.xml
@@ -1,35 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id = "@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="kappacode.kronos.fragments.MyDay">
 
-        <com.github.mikephil.charting.charts.PieChart
-            android:id="@+id/piechart"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            />
-
-        <ListView
-            android:id="@+id/listView_activities"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:descendantFocusability="beforeDescendants" />
-
         <Button
-            android:id="@+id/button_add_activity"
+            android:id="@+id/button_adicionar_atividdade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/button_add_activity"
+            android:layout_alignParentBottom="true"
+            android:text="@string/button_adicionar_atividade"
             android:textColor="@color/button_add_activity"
             style="?android:attr/borderlessButtonStyle"/>
 
+        <ListView
+            android:id="@+id/listView_atividades"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/button_adicionar_atividdade"
+            android:descendantFocusability="beforeDescendants" />
 
-
-</LinearLayout>
-
+</RelativeLayout>
