--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,43 @@
     <color name="navigationBarColor">#000000</color>
     <color name="colorAccent">#FFF3E0</color>
 
-
     <!-- MyDayFragment -->
     <color name="textView_myDay_title">#000000</color>
     <color name="button_add_activity">#000000</color>
+
+    <!-- PieChart -->
+    <color name="pieChart_title">#000000</color>
+
+    <!-- Lista de Atividades -->
+    <color name="list_activity_empty_item_layout">#000000</color>
+
+    <!-- Item da Lista de Atividades -->
+    <color name="textView_doisPontos">#000000</color>
+
+    <!-- History -->
+    <color name="textView_history_title">#000000</color>
+    <color name="spinner_selectPeriod">#000000</color>
+    <color name="textView_history_activity_title">#000000</color>
+    <color name="textView_goals_title">#000000</color>
+    <color name="textView_history_activity">#000000</color>
+    <color name="textView_history_activity_quality">#2196f3</color>
+    <color name="textView_history_activity_duration">#2196f3</color>
+    <color name="textView_separator">#2196f3</color>
+
+    <!-- QualidadeDialog -->
+    <color name="button_avaliar">#000000</color>
+
+    <!-- Goals -->
+    <color name="expandableListView_metas_divider">#000000</color>
+    <color name="tvGroup">#000000</color>
+    <color name="tvItem1">#000000</color>
+    <color name="tvItem2">#000000</color>
+
+    <!-- AddGOal -->
+    <color name="spinner_metaPrazo_text">#000000</color>
+    <color name="textView_metaAtingir">#000000</color>
+    <color name="textView_associarAtividade">#000000</color>
+    <color name="checkBox_atividadeAssociada_text">#000000</color>
 
 
 </resources>
