--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--Action Bar-->
-    <color name="colorPrimary">#FF3D00</color>
-    <color name="colorPrimaryDark">#DD2C00</color>
-    <color name="textColorPrimary">#FFFFFF</color>
-    <color name="windowBackground">#FFFFFF</color>
-    <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#FFF3E0</color>
-
-    <!-- MyDayFragment -->
-    <color name="textView_myDay_title">#000000</color>
-    <color name="button_add_activity">#000000</color>
-
+    <!-- MyDayActivity -->
+    <color name="textView_myDay_titulo">#000000</color>
+    <color name="button_adicionar_atividade">#000000</color>
     <!-- PieChart -->
     <color name="pieChart_title">#000000</color>
 
@@ -45,6 +36,4 @@
     <color name="textView_metaAtingir">#000000</color>
     <color name="textView_associarAtividade">#000000</color>
     <color name="checkBox_atividadeAssociada_text">#000000</color>
-
-
 </resources>
