--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,11 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <!-- Tab -->
-    <dimen name="tab_max_width">264dp</dimen>
-    <dimen name="tab_padding_bottom">16dp</dimen>
-    <dimen name="tab_label">14sp</dimen>
-    <dimen name="custom_tab_layout_height">72dp</dimen>
+    <!-- MainActivity -->
+    <dimen name="tabLayout_height">20dp</dimen>
 
     <!-- MyDay Activity -->
     <dimen name="textView_myDay_title">20dp</dimen>
@@ -69,7 +66,5 @@
     <dimen name="textView_associarAtividade">25sp</dimen>
     <dimen name="checkBox_atividadeAssociada_text">20sp</dimen>
     <dimen name="editText_associarNovaAtividade">25sp</dimen>
-
-
-
 </resources>
+
